// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.alike suffix in a list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id)}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`.alike suffix in a list 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = safeOutput(ctx['this'].props.todo.id, node, key, "\\u00021");
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([ctx], [b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter, node, key, "\\u00021");
    const b3 = comp1({fn: ()=>1}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix accepts a signal-typed prop without validation error 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {count: ctx['this'].state.val};
    return comp1(props1, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix accepts a signal-typed prop without validation error 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix promotes a plain value to a signal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {count: ctx['this'].state.val};
    return comp1(props1, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix promotes a plain value to a signal 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix works in a t-foreach loop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Item\`, true, false, false, [], ["value"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({value: ctx['item'].n}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`.signal suffix works in a t-foreach loop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: child re-reads updated value when parent state changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: child re-reads updated value when parent state changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix: child receives a read-only reactive value 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: child receives a read-only reactive value 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix: effects in child react to parent value changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, [], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: effects in child react to parent value changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, zero, withoutZero, callTemplate } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: 'main'}, key + \`\\u00021\`, node, this, null);
    const b3 = callTemplate(\`sub\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in a template and one in a template it calls 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: 'sub'}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, markRaw } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    return comp1({v: 'slot'}, key + \`\\u00021\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({"default": {__render: slot1, __ctx: ctx, __owner: this}})}, key + \`\\u00022\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, callSlot } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: 'child'}, key + \`\\u00021\`, node, this, null);
    const b3 = callSlot(ctx, node, key + \`\\u00022\`, "default", false, null);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a .signal in slot content and one in the slot host's template 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a removed child takes its signal with it 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Item\`, true, false, false, [], ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.items);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["i"] = k_block2[i1];
      const key1 = ctx['i'];
      const skey1 = keyOf(key1);
      c_block2[i1] = withKey(comp1({v: ctx['i']}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a removed child takes its signal with it 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const ctx1 = Object.create(ctx);
    ctx1["x"] = ctx['this'].state.a;
    ctx1[zero] = null;
    const b2 = callTemplate(\`sub\`, this, app, ctx1, node, key + \`\\u00021\`);
    const ctx2 = Object.create(ctx);
    ctx2["x"] = ctx['this'].state.b;
    ctx2[zero] = null;
    const b3 = callTemplate(\`sub\`, this, app, ctx2, node, key + \`\\u00022\`);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Leaf\`, true, false, false, [], ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: ctx['x']}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: one signal per child > a template with a .signal called twice 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`.signal suffix: signal reference is stable across updates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["tick"], ["count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({count: ctx['this'].state.val,tick: ctx['this'].state.tick}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.signal suffix: signal reference is stable across updates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.count(), node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.tick, node, key, "\\u00022");
    return multi([b2, b3]);
  }
}"
`;

exports[`.translate props are translated 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`translated message\`}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`.translate props are translated 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message, node, key, "\\u00021");
  }
}"
`;

exports[`a component held in reactive state reads its props through a getter > of a schema view 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["label"]);
  
  return function template(ctx, node, key = "") {
    return comp1({label: 'hola'}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a component held in reactive state reads its props through a getter > of a schema view 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a component held in reactive state reads its props through a getter > of a schema-less view 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["label"]);
  
  return function template(ctx, node, key = "") {
    return comp1({label: 'hola'}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a component held in reactive state reads its props through a getter > of a schema-less view 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a props view is read-only, declared keys and new ones alike 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["a"]);
  
  return function template(ctx, node, key = "") {
    return comp1({a: 1}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a props view is read-only, declared keys and new ones alike 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`a props view read through a proxy > a getter of a proxied component reads its props and follows their updates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].v()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a props view read through a proxy > a getter of a proxied component reads its props and follows their updates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`a props view read through a proxy > a schema view read through a proxy of its component is the view itself 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["record","count"]);
  
  return function template(ctx, node, key = "") {
    return comp1({record: ctx['this'].record,count: 3}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a props view read through a proxy > a schema view read through a proxy of its component is the view itself 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`a props view read through a proxy > a schema-less view read through a proxy of its component is the view itself 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["record"]);
  
  return function template(ctx, node, key = "") {
    return comp1({record: ctx['this'].record}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a props view read through a proxy > a schema-less view read through a proxy of its component is the view itself 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`a schema-less view resolves the defaults the component declared 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["width"]);
  
  return function template(ctx, node, key = "") {
    return comp1({width: ctx['this'].width()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`a schema-less view resolves the defaults the component declared 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.width, node, key, "\\u00021");
  }
}"
`;

exports[`an expression choosing between arrow functions is re-evaluated as a prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["cb"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["cb"]);
  const comp3 = createComponent(app, \`Child\`, true, false, false, ["cb.name"]);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = comp1({cb: ctx['this'].state.flag?()=>'A':()=>'B'}, key + \`\\u00021\`, node, this, null);
    ctx["n"] = ctx['this'].state.n;
    const b3 = comp2({cb: ctx['n']>1?()=>'big':()=>'small'}, key + \`\\u00022\`, node, this, null);
    ctx["name"] = ctx['this'].state.name;
    const b4 = comp3({cb: ()=>\`hi \${ctx['name']}\`,"cb.name": ctx['name']}, key + \`\\u00023\`, node, this, null);
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`an expression choosing between arrow functions is re-evaluated as a prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.cb(), node, key, "\\u00021");
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter, node, key, "\\u00021");
    const b3 = comp1({fn: ()=>1}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn(), node, key, "\\u00021");
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo","toggle.elem"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id),"toggle.elem": ctx['elem']}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = safeOutput(ctx['this'].props.todo.id, node, key, "\\u00021");
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([ctx], [b2, b3]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["greetings"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({greetings: ctx['this'].greetings}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.greetings, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].val;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.onClick, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["item"] = k_block1[i1];
      const key1 = ctx['item'].val;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`basics > explicit object prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > explicit object prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.someval, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > prop names can contain - 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["prop-name"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'prop-name': 7}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`basics > prop names can contain - 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props['prop-name'], node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["some-dashed-prop"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'some-dashed-prop': 5}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    return block1([ctx]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<p>43</p>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["abc"] = new LazyValue(value1, ctx, this, node, key + \`\\u00021\`);
    const b3 = comp1({val: ctx['abc']}, key + \`\\u00022\`, node, this, null);
    return block1([], [b3]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["abc"] = \`42\`;
    const b2 = comp1({val: ctx['abc']}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = 42;
    const b2 = comp1({val: ctx['val']}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`basics > template string in prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["propName"]);
  
  return function template(ctx, node, key = "") {
    return comp1({propName: \`1\${ctx['this'].someVal}3\`}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`basics > template string in prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`bound functions are considered 'alike' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    const b3 = comp1({fn: (ctx['this'].someFunction).bind(this)}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`bound functions are considered 'alike' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`bound functions is not referentially equal after update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  return function template(ctx, node, key = "") {
    return comp1({val: ctx['this'].state.val,fn: (ctx['this'].someFunction).bind(this)}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`bound functions is not referentially equal after update 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.val, node, key, "\\u00021");
  }
}"
`;

exports[`can bind function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: (ctx['this'].doSomething).bind(this)}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`can bind function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`can use .translate suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`some message\`}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`can use .translate suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message, node, key, "\\u00021");
  }
}"
`;

exports[`default props don't cause spurious updates with t-props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput, createComponent } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  let block2 = createBlock(\`<div block-handler-0="click">tick: <block-child-0/></div>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const b3 = safeOutput(ctx['this'].v(), node, key, "\\u00021");
    const b2 = block2([ctx], [b3]);
    const b4 = comp1({...ctx['this'].makeProps()}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b4]);
  }
}"
`;

exports[`default props don't cause spurious updates with t-props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.b, node, key, "\\u00021");
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: ((_val)=>ctx['this'].doSomething(_val)).bind(this)}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`every view of a component resolves the defaults the component declared 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`every view of a component resolves the defaults the component declared 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`reactive props (issue #1908) > a prop read only in an effect (not the template) still reacts to a value swap 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > a prop read only in an effect (not the template) still reacts to a value swap 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>hi</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`reactive props (issue #1908) > effect observing a prop reacts to both in-place mutation and value swap 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > effect observing a prop reacts to both in-place mutation and value swap 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.o.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > making props reactive does not introduce extra renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Test\`, true, false, false, ["o"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({o: ctx['this'].obj()}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > making props reactive does not introduce extra renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].tick(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > props() tracks new and deleted keys from t-props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].childProps()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`reactive props (issue #1908) > props() tracks new and deleted keys from t-props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`reactive props (issue #1908) > this.props still reflects the old value inside onWillUpdateProps 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`reactive props (issue #1908) > this.props still reflects the old value inside onWillUpdateProps 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema defaults and signal-driven props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["height","width"]);
  
  return function template(ctx, node, key = "") {
    return comp1({height: ctx['this'].height(),width: ctx['this'].width()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema defaults and signal-driven props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.width, node, key, "\\u00021");
    const b3 = text(\` / \`);
    const b4 = safeOutput(ctx['this'].props.height, node, key, "\\u00022");
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`schema view > a prop read only in setup, then in an effect, follows its updates 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].v()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema view > a prop read only in setup, then in an effect, follows its updates 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`schema view > a schema view reads through an object inheriting from it 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["a"]);
  
  return function template(ctx, node, key = "") {
    return comp1({a: 7}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema view > a schema view reads through an object inheriting from it 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`schema view > a schema view's own keys are exactly the schema's 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["a"]);
  
  return function template(ctx, node, key = "") {
    return comp1({a: 1}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema view > a schema view's own keys are exactly the schema's 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`schema view > views of one component class keep their own values 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].a()}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({value: ctx['this'].b()}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`schema view > views of one component class keep their own values 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a computed over a key read before it existed sees it appear 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].p()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over a key read before it existed sees it appear 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a computed over a key that disappears sees undefined 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].p()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over a key that disappears sees undefined 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a computed over the key list follows keys added and removed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].p()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a computed over the key list follows keys added and removed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].c(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a key list first read after the keys changed is the current one, then followed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].p()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`schema-less view key set > a key list first read after the keys changed is the current one, then followed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].show()?ctx['this'].c():'-', node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`schema-less view key set > a schema-less view has no prototype and no symbol-keyed property 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`schema-less view key set > a view created before the schema view resolves its defaults 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.w, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;
